--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -20,11 +20,14 @@
     </div>
     
     {% for jss in all_jss %}
+    <a href="{% url 'detail' jss.id %}">
     <div class="all_jss">
+        <p>{{jss.id}}</p>    
         <p>{{jss.title}}</p>
         <p>{{jss.content}}</p>
         <p>{{jss.updated_at|date:"Y년 m월 d일"}}</p>
     </div>
+    </a>
     {% endfor %}
 
 
